Integrated Formspree contact form

--- a/kontakt.html
+++ b/kontakt.html
@@ -112,7 +112,7 @@
                             loading = true; 
                             successMessage = false;
                             errorMessage = false;
-                            fetch('https://formspree.io/f/mgebajaj', {
+                            fetch('https://formspree.io/f/xldwokkv', {
                                 method: 'POST',
                                 body: new FormData($event.target),
                                 headers: {
