--- a/about.html
+++ b/about.html
@@ -21,6 +21,15 @@
             -moz-osx-font-smoothing: grayscale;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MZXJYCRHY4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MZXJYCRHY4');
+</script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
