--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
             100% { opacity: 1; }
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MZXJYCRHY4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MZXJYCRHY4');
+</script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
